--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -23,7 +23,7 @@ write-your-selector-here {
 }
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
-write-your-selector-here {
+.kitty-1 {
   position: absolute;
   z-index: 4;
   top: 260px;
@@ -31,7 +31,31 @@ write-your-selector-here {
 }
 
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
-write-your-selector-here {
+#kitty-2 {
+  position: absolute;
+  z-index: 3;
+  top: 217px;
+  left: 223px;
+}
+
+#basket img {
+  position: absolute;
+  z-index: 5;
+  top: 291px;
+  left: 319px;
+}
+
+/* Select the image based on it being a sibling that follows imediately after the element with if of ball (using adjacent sibling selector) */
+#ball + img {
+  position: absolute;
+  z-index: 4;
+  top: 260px;
+  left: 455px;
+}
+
+/* Select  the image that has an attribute value mathcing "Kitty 5" (using attribute selector) */
+
+img[alt="Kitty 5"] {
   position: absolute;
   z-index: 3;
   top: 217px;
